kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jira-to-slack
  labels:
    name: jira-to-slack
