kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jira-to-slack
spec:
  rules:
  - host: jira-to-slack.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jira-to-slack
          servicePort: http
